--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,7 +213,7 @@ jobs:
                     . venv/bin/activate
                     git clone --depth 1 git@github.com:plotly/dash.git dash-main
                     pip install -e ./dash-main[ci,testing] --quiet
-                    cd dash-renderer && npm run build && pip install -e . && cd ../..
+                    cd dash-main/dash-renderer && npm run build && pip install -e . && cd ../..
 
             - run:
                 name: Install test requirements
