--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "wait-on": "^3.3.0",
     "webpack": "^4.37.0",
     "webpack-cli": "^3.3.6",
+    "webpack-dash-dynamic-import": "github:plotly/webpack-dash-dynamic-import",
     "webpack-dev-server": "^3.7.2",
     "webpack-preprocessor": "^0.1.12",
     "xlsx": "^0.14.4"
