--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "wait-on": "^3.3.0",
     "webpack": "^4.40.0",
     "webpack-cli": "^3.3.8",
-    "webpack-dash-dynamic-import": "github:plotly/webpack-dash-dynamic-import",
+    "webpack-dash-dynamic-import": "^1.0.0-alpha.1",
     "webpack-dev-server": "^3.8.0",
     "webpack-preprocessor": "^0.1.12",
     "xlsx": "^0.15.1"
