--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@percy-io/percy-storybook": "^2.1.0",
+    "@plotly/webpack-dash-dynamic-import": "^1.0.0-alpha.1",
     "@storybook/cli": "^5.1.11",
     "@storybook/react": "^5.1.11",
     "@types/d3-format": "^1.3.1",
