--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@percy-io/percy-storybook": "^2.1.0",
+    "@percy/storybook": "^3.2.0",
     "@storybook/cli": "^5.1.11",
     "@storybook/react": "^5.1.11",
     "@types/d3-format": "^1.3.1",
