--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "private::test.standalone": "cypress run --browser chrome --spec 'tests/cypress/tests/standalone/**/*'",
     "build.watch": "webpack-dev-server --content-base dash_table --mode development --config webpack.dev.config.js",
     "build": "run-s private::build:js private::build:py",
+    "postbuild": "es-check es5 dash_table/*.js",
     "format": "run-s \"private::lint:ts -- --fix\"",
     "lint": "run-s private::lint:*",
     "test.server": "run-p --race private::host* private::test.server",
@@ -62,7 +63,6 @@
     "@babel/cli": "^7.6.2",
     "@babel/core": "^7.6.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
     "@cypress/webpack-preprocessor": "^4.1.0",
@@ -82,10 +82,10 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-select": "^1.3.4",
     "babel-loader": "^8.0.6",
-    "core-js": "^3.2.1",
     "css-loader": "^3.2.0",
     "cypress": "^3.4.1",
     "d3-format": "^1.4.1",
+    "es-check": "^5.0.0",
     "fast-isnumeric": "^1.1.3",
     "file-loader": "^4.2.0",
     "http-server": "^0.11.1",
