--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@percy/storybook": "^3.2.0",
     "@plotly/dash-component-plugins": "^1.0.2",
-    "@plotly/webpack-dash-dynamic-import": "^1.1.3-rc1",
+    "@plotly/webpack-dash-dynamic-import": "^1.1.3",
     "@storybook/cli": "^5.1.11",
     "@storybook/react": "^5.1.11",
     "@types/d3-format": "^1.3.1",
