--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,10 @@ jobs:
 
             - run:
                 name: Run tests
-                command: npm run test.standalone
+                command: |
+                    rm -rf node_modules/cypress
+                    npm i cypress@3.4.1
+                    npm run test.standalone
 
 
     "unit-test":
