--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,7 +133,7 @@ jobs:
 
             - run:
                 name: Install package.json
-                command: npm i
+                command: npm ci
 
             - save_cache:
                 key: deps1-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}
@@ -165,7 +165,7 @@ jobs:
 
             - run:
                 name: Install package.json
-                command: npm i
+                command: npm ci
 
             - save_cache:
                 key: deps1-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}
