--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ Pygments==2.2.0
 pylint==2.1.1
 python-dateutil==2.7.3
 pytz==2018.5
+pyyaml=5.2
 retrying==1.3.3
 simplegeneric==0.8.1
 six==1.11.0
@@ -49,6 +50,6 @@ traitlets==4.3.2
 typed-ast==1.1.0
 urllib3==1.23
 wcwidth==0.1.7
-Werkzeug==0.14.1
+Werkzeug==0.15.6
 wrapt==1.10.11
 xlrd>= 1.0.0
