--- a/package.json
+++ b/package.json
@@ -60,10 +60,6 @@
   "author": "Chris Parmer <chris@plot.ly>",
   "maintainer": "Ryan Patrick Kyle <ryan@plot.ly>",
   "license": "MIT",
-  "dependencies": {
-    "@types/highlight.js": "^9.12.3",
-    "highlight.js": "^9.17.0"
-  },
   "devDependencies": {
     "@babel/cli": "^7.6.2",
     "@babel/core": "^7.6.2",
@@ -83,6 +79,7 @@
     "@storybook/cli": "^5.1.11",
     "@storybook/react": "^5.1.11",
     "@types/d3-format": "^1.3.1",
+    "@types/highlight.js": "^9.12.3",
     "@types/papaparse": "^5.0.1",
     "@types/ramda": "^0.26.21",
     "@types/react": "^16.9.2",
@@ -95,6 +92,7 @@
     "es-check": "^5.0.0",
     "fast-isnumeric": "^1.1.3",
     "file-loader": "^4.2.0",
+    "highlight.js": "^9.17.0",
     "http-server": "^0.11.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
