--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "test.server": "run-p --race private::host* private::test.server",
     "test.standalone": "run-p --race private::host_js private::test.standalone",
     "test.unit": "run-s private::test.python private::test.unit",
-    "test.visual": "build-storybook && percy-storybook",
+    "test.visual": "build-storybook && percy-storybook --debug",
     "test.visual-local": "build-storybook",
     "test.watch": "run-p --race \"private::build:js-test-watch\" --race private::host* private::opentests"
   },
