(wip) load all test servers as one app (wip) update test files to at least execute and load the correct path

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "main": "dash_table/bundle.js",
   "scripts": {
     "preprivate::opentests": "run-s private::wait*",
-    "preprivate::test.server": "run-s private::wait_dash*",
+    "preprivate::test.server": "wait-on http://localhost:8081",
     "preprivate::test.standalone": "run-s private::wait_js",
     "pretest.standalone": "run-s private::build:js-test-standalone",
     "private::build": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack --display-reasons --bail",
@@ -22,23 +22,10 @@
     "private::build:js-test-standalone": "run-s \"private::build -- --mode development --config webpack.test.standalone.config.js\"",
     "private::build:js-test-watch": "run-s \"private::build -- --mode development --config webpack.test.config.js --watch\"",
     "private::build:py": "dash-generate-components src/dash-table/dash/DataTable.js dash_table -p package-info.json && cp dash_table_base/** dash_table/ && dash-generate-components src/dash-table/dash/DataTable.js dash_table -p package-info.json --r-prefix 'dash'",
-    "private::host_dash8081": "python tests/cypress/dash/v_be_page.py",
-    "private::host_dash8082": "python tests/cypress/dash/v_copy_paste.py",
-    "private::host_dash8083": "python tests/cypress/dash/v_fe_page.py",
-    "private::host_dash8084": "python tests/cypress/dash/v_data_loading.py",
-    "private::host_dash8085": "python tests/cypress/dash/v_default.py",
-    "private::host_dash8086": "python tests/cypress/dash/v_pagination.py",
-    "private::host_dash8087": "python tests/cypress/dash/v_markdown.py",
+    "private::host.server": "python tests/cypress/dash/index.py",
     "private::host_js": "http-server ./dash_table -c-1 --silent",
     "private::lint:ts": "tslint --project tsconfig.json --config tslint.json",
     "private::lint:py": "flake8 --exclude=DataTable.py,__init__.py,_imports_.py dash_table",
-    "private::wait_dash8081": "wait-on http://localhost:8081",
-    "private::wait_dash8082": "wait-on http://localhost:8082",
-    "private::wait_dash8083": "wait-on http://localhost:8083",
-    "private::wait_dash8084": "wait-on http://localhost:8084",
-    "private::wait_dash8085": "wait-on http://localhost:8085",
-    "private::wait_dash8086": "wait-on http://localhost:8086",
-    "private::wait_dash8087": "wait-on http://localhost:8087",
     "private::wait_js": "wait-on http://localhost:8080",
     "private::opentests": "cypress open",
     "private::test.python": "python -m unittest tests/unit/format_test.py",
@@ -50,7 +37,7 @@
     "postbuild": "es-check es5 dash_table/*.js",
     "format": "run-s \"private::lint:ts -- --fix\"",
     "lint": "run-s private::lint:*",
-    "test.server": "run-p --race private::host* private::test.server",
+    "test.server": "run-p --race private::host.server private::test.server",
     "test.standalone": "run-p --race private::host_js private::test.standalone",
     "test.unit": "run-s private::test.python private::test.unit",
     "test.visual": "build-storybook && percy-storybook",
