--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "private::build:js-test-watch": "run-s \"private::build -- --mode development --config webpack.test.config.js --watch\"",
     "private::build:py": "dash-generate-components src/dash-table/dash/DataTable.js dash_table -p package-info.json && cp dash_table_base/** dash_table/ && dash-generate-components src/dash-table/dash/DataTable.js dash_table -p package-info.json --r-prefix 'dash'",
     "private::host_dash8081": "python tests/cypress/dash/v_be_page.py",
-    "private::host_dash8082": "python tests/cypress/dash/v_copy_paste.py",
     "private::host_dash8083": "python tests/cypress/dash/v_fe_page.py",
     "private::host_dash8084": "python tests/cypress/dash/v_data_loading.py",
     "private::host_dash8085": "python tests/cypress/dash/v_default.py",
@@ -51,6 +50,7 @@
     "format": "run-s \"private::lint:ts -- --fix\"",
     "lint": "run-s private::lint:*",
     "test.server": "run-p --race private::host* private::test.server",
+    "test.server2": "pytest tests/selenium",
     "test.standalone": "run-p --race private::host_js private::test.standalone",
     "test.unit": "run-s private::test.python private::test.unit",
     "test.visual": "build-storybook && percy-storybook",
