--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,55 @@
 version: 2
 
 jobs:
+    "legacy-server-test":
+        docker:
+            - image: circleci/python:3.6-node-browsers
+            - image: cypress/base:10
+
+        steps:
+            - checkout
+            - restore_cache:
+                key: deps1-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}-{{ checksum ".circleci/config.yml" }}
+            - run:
+                name: Install npm packages
+                command: npm ci
+            - run:
+                name: Cypress Install
+                command: |
+                    $(npm bin)/cypress install
+
+            - save_cache:
+                key: deps1-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}-{{ checksum ".circleci/config.yml" }}
+                paths:
+                    - node_modules
+                    - /home/circleci/.cache/Cypress
+
+            - run:
+                name: Install requirements
+                command: |
+                    sudo pip install --upgrade virtualenv
+                    python -m venv venv || virtualenv venv
+                    . venv/bin/activate
+                    pip install -r dev-requirements.txt --quiet
+                    git clone --depth 1 git@github.com:plotly/dash.git dash-main
+                    pip install -e ./dash-main[dev] --quiet
+                    cd dash-main/dash-renderer && npm run build && pip install -e . && cd ../..
+
+            - run:
+                name: Build
+                command: |
+                    . venv/bin/activate
+                    npm run private::build:js-test
+                    npm run private::build:py
+                    pip install -e .
+
+            - run:
+                name: Run tests
+                command: |
+                    . venv/bin/activate
+                    npm run test.server-legacy
+
+
     "server-test":
         docker:
             - image: circleci/python:3.6-node-browsers
@@ -33,13 +82,13 @@ jobs:
                     pip install -r dev-requirements.txt --quiet
                     git clone --depth 1 git@github.com:plotly/dash.git dash-main
                     pip install -e ./dash-main[dev,testing] --quiet
+                    cd dash-main/dash-renderer && npm run build && pip install -e . && cd ../..
 
             - run:
                 name: Build
                 command: |
                     . venv/bin/activate
-                    npm run private::build:js-test
-                    npm run private::build:py
+                    npm run build
                     pip install -e .
 
             - run:
@@ -47,7 +96,6 @@ jobs:
                 command: |
                     . venv/bin/activate
                     npm run test.server
-                    npm run test.server2
 
 
     "standalone-test":
@@ -248,6 +296,7 @@ workflows:
         jobs:
             - "python-3.6"
             - "node"
+            - "legacy-server-test"
             - "server-test"
             - "standalone-test"
             - "unit-test"
