--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "postbuild": "es-check es5 dash_table/*.js",
     "format": "run-s \"private::lint:ts -- --fix\"",
     "lint": "run-s private::lint:*",
-    "test.server": "run-p --race private::host* private::test.server",
-    "test.server2": "pytest tests/selenium",
+    "test.server-legacy": "run-p --race private::host* private::test.server",
+    "test.server": "pytest tests/selenium",
     "test.standalone": "run-p --race private::host_js private::test.standalone",
     "test.unit": "run-s private::test.python private::test.unit",
     "test.visual": "build-storybook && percy-storybook",
