--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
 version: 2
 
 jobs:
-    "server-test":
+    "legacy-server-test":
         docker:
-            - image: circleci/python:3.6-node-browsers
+            - image: circleci/python:3.6.9-node-browsers
             - image: cypress/base:10
 
         steps:
@@ -33,6 +33,56 @@ jobs:
                     pip install -r dev-requirements.txt --quiet
                     git clone --depth 1 git@github.com:plotly/dash.git dash-main
                     pip install -e ./dash-main[dev] --quiet
+                    cd dash-main/dash-renderer && npm run build && pip install -e . && cd ./../..
+
+            - run:
+                name: Build
+                command: |
+                    . venv/bin/activate
+                    npm run private::build:js-test
+                    npm run private::build:py
+                    pip install -e .
+
+            - run:
+                name: Run tests
+                command: |
+                    . venv/bin/activate
+                    npm run test.server-legacy
+
+
+    "server-test":
+        docker:
+            - image: circleci/python:3.6.9-node-browsers
+            - image: cypress/base:10
+
+        steps:
+            - checkout
+            - restore_cache:
+                key: deps1-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}-{{ checksum ".circleci/config.yml" }}
+            - run:
+                name: Install npm packages
+                command: npm ci
+            - run:
+                name: Cypress Install
+                command: |
+                    $(npm bin)/cypress install
+
+            - save_cache:
+                key: deps1-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}-{{ checksum ".circleci/config.yml" }}
+                paths:
+                    - node_modules
+                    - /home/circleci/.cache/Cypress
+
+            - run:
+                name: Install requirements
+                command: |
+                    sudo pip install --upgrade virtualenv
+                    python -m venv venv || virtualenv venv
+                    . venv/bin/activate
+                    pip install -r dev-requirements.txt --quiet
+                    git clone --depth 1 git@github.com:plotly/dash.git dash-main
+                    pip install -e ./dash-main[dev] --quiet
+                    cd dash-main/dash-renderer && npm run build && pip install -e . && cd ./../..
 
             - run:
                 name: Build
@@ -247,6 +297,7 @@ workflows:
         jobs:
             - "python-3.6"
             - "node"
+            - "legacy-server-test"
             - "server-test"
             - "standalone-test"
             - "unit-test"
