--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "file-loader": "^5.1.0",
     "highlight.js": "^9.18.1",
     "http-server": "^0.12.1",
+    "husky": "^4.2.3",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "npm-run-all": "^4.1.5",
