--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "private::build:js-test-standalone": "run-s \"private::build -- --mode development --config webpack.test.standalone.config.js\"",
     "private::build:js-test-watch": "run-s \"private::build -- --mode development --config webpack.test.config.js --watch\"",
     "private::build:py": "dash-generate-components src/dash-table/dash/DataTable.js dash_table -p package-info.json && cp dash_table_base/** dash_table/ && dash-generate-components src/dash-table/dash/DataTable.js dash_table -p package-info.json --r-prefix 'dash'",
-    "private::format:ts": "npm run private::lint:ts -- --fix",
-    "private::format:black": "black --exclude dash_table .",
+    "private::format.ts": "npm run private::lint.ts -- --fix",
+    "private::format.black": "black --exclude dash_table .",
     "private::host_js": "http-server ./dash_table -c-1 --silent",
-    "private::lint:ts": "tslint --project tsconfig.json --config tslint.json",
-    "private::lint:flake8": "flake8 --exclude=DataTable.py,__init__.py,_imports_.py dash_table tests",
-    "private::lint:black": "black --check --exclude dash_table .",
+    "private::lint.ts": "tslint --project tsconfig.json --config tslint.json",
+    "private::lint.flake": "flake8 --exclude=dash_table*,node_modules",
+    "private::lint.black": "black --check --exclude dash_table .",
     "private::wait_js": "wait-on http://localhost:8080",
     "private::opentests": "cypress open",
     "private::test.python": "python -m unittest tests/unit/format_test.py",
@@ -36,8 +36,8 @@
     "build.watch": "webpack-dev-server --content-base dash_table --mode development --config webpack.dev.config.js",
     "build": "run-s private::build:js private::build:py",
     "postbuild": "es-check es5 dash_table/*.js",
-    "format": "run-s private::format:*",
-    "lint": "run-s private::lint:*",
+    "format": "run-s private::format.*",
+    "lint": "run-s private::lint.*",
     "test.server": "pytest tests/selenium",
     "test.standalone": "run-p --race private::host_js private::test.standalone",
     "test.unit": "run-s private::test.python private::test.unit",
