--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "private::format.black": "black --exclude dash_table .",
     "private::host_js": "http-server ./dash_table -c-1 --silent",
     "private::lint.ts": "tslint --project tsconfig.json --config tslint.json",
-    "private::lint.flake": "flake8 --exclude=dash_table*,node_modules",
+    "private::lint.flake": "flake8 --exclude=dash_table*,node_modules,venv",
     "private::lint.black": "black --check --exclude dash_table .",
     "private::wait_js": "wait-on http://localhost:8080",
     "private::opentests": "cypress open",
