:pencil2: add single quotes for CRAN

--- a/dash-info.yaml
+++ b/dash-info.yaml
@@ -1,13 +1,17 @@
 pkg_help_description: >-
     An interactive table component designed for editing and exploring
-    large datasets, DataTable is rendered with standard, semantic HTML
+    large datasets, 'dashDataTable' is rendered with standard, semantic HTML
     <table/> markup, which makes it accessible, responsive, and easy
-    to style. This component was written from scratch in React.js
-    specifically for the Dash community. Its API was designed to be
-    ergonomic and its behaviour is completely customizable through its
+    to style. This component was written from scratch in 'React.js'
+    specifically for the 'Dash' community. Its API was designed to be
+    ergonomic and its behaviour is completely customizable through its 
     properties.
 pkg_help_title: >-
-    Core Interactive Table Component for Dash
+    Core Interactive Table Component for 'Dash'
+pkg_authors: >-
+    c(person("Chris", "Parmer", email = "chris@plotly.com", role = c("aut")), person("Ryan Patrick", "Kyle", email = "ryan@plotly.com", role = c("cre"), comment = c(ORCID = "0000-0002-4958-2844")), person(family = "Plotly Technologies, Inc.", role = "cph")) 
+pkg_copyright: >-
+    Plotly Technologies, Inc.
 r_examples:
     - name: dashDataTable
       dontrun: FALSE
