--- a/package.json
+++ b/package.json
@@ -90,9 +90,9 @@
     "papaparse": "^5.1.1",
     "ramda": "^0.27.0",
     "raw-loader": "^4.0.0",
-    "react": "16.13.0",
+    "react": "^17.0.0-rc.0",
     "react-docgen": "^5.3.0",
-    "react-dom": "16.13.0",
+    "react-dom": "^17.0.0-rc.0",
     "react-select": "^1.3.0",
     "remarkable": "^2.0.0",
     "sheetclip": "^0.3.0",
