--- a/package.json
+++ b/package.json
@@ -68,10 +68,10 @@
     "@storybook/react": "^5.3.19",
     "@types/d3-format": "^1.3.1",
     "@types/highlight.js": "^9.12.3",
-    "@types/papaparse": "^5.0.3",
+    "@types/papaparse": "^5.0.6",
     "@types/ramda": "^0.26.21",
-    "@types/react": "^16.9.23",
-    "@types/react-dom": "^16.9.5",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
     "@types/react-select": "^3.0.10",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
@@ -90,9 +90,9 @@
     "papaparse": "^5.2.0",
     "ramda": "^0.27.1",
     "raw-loader": "^4.0.1",
-    "react": "16.13.0",
+    "react": "^16.13.1",
     "react-docgen": "^5.3.0",
-    "react-dom": "16.13.0",
+    "react-dom": "^16.13.1",
     "react-select": "^1.3.0",
     "remarkable": "^2.0.1",
     "sheetclip": "^0.3.0",
@@ -113,11 +113,11 @@
   ],
   "peerDependencies": {
     "prop-types": "^15.7.2",
-    "react": ">=16.13",
-    "react-dom": ">=16.13"
+    "react": ">=16.13.1",
+    "react-dom": ">=16.13.1"
   },
   "engines": {
-    "node": ">=8.11.0",
+    "node": ">=12.0.0",
     "npm": ">=6.1.0"
   }
 }
