--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,7 +109,9 @@ jobs:
                     python -m venv venv || virtualenv venv
                     . venv/bin/activate
                     pip install -r dev-requirements.txt --quiet
-                    pip install --progress-bar off -e git+https://github.com/plotly/dash.git@dev#egg=dash[dev,testing]
+                    pip install --progress-bar off -e git+https://github.com/plotly/dash.git@dcg-template#egg=dash[dev,testing]
+                    git clone --depth 1 -b dcg-template git@github.com:plotly/dash.git main
+                    cd ./main/\@plotly/dash-generate-components; npm ci; cd ../../..
 
             - run:
                 name: Run tests
