Add bootstrap to all visual tests - undo `table-` prefix fix temporarily

--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-select": "^3.0.16",
     "babel-loader": "^8.1.0",
+    "bootstrap": "^4.5.3",
     "css-loader": "^3.6.0",
     "css.escape": "^1.5.1",
     "cypress": "^3.8.1",
@@ -86,6 +87,7 @@
     "highlight.js": "^10.3.1",
     "http-server": "^0.12.3",
     "husky": "^4.2.5",
+    "jquery": "^3.5.1",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
     "npm-run-all": "^4.1.5",
