--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
     "server-test":
         docker:
-            - image: circleci/python:3.7-node
+            - image: circleci/python:3.7-stretch-node
             - image: cypress/base:10
 
         steps:
@@ -13,11 +13,6 @@ jobs:
                 name: Inject Percy Environment variables
                 command: |
                   echo 'export PERCY_TOKEN="$PERCY_TOKEN_E2E"' >> $BASH_ENV
-
-            - run:
-                name: Install Puppeteer dependencies
-                command: |
-                sudo apt-get install libnss3
 
             - restore_cache:
                 key: dep-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}-{{ checksum ".circleci/config.yml" }}
