--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
     "server-test":
         docker:
-            - image: circleci/python:3.7-node
+            - image: circleci/python:3.7-node-browsers
             - image: cypress/base:10
 
         steps:
