--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "private::wait_js": "wait-on http://localhost:8080",
     "private::opentests": "cypress open",
     "private::test.python": "python -m unittest tests/unit/format_test.py",
-    "private::test.unit": "cypress run --browser chrome --spec 'tests/cypress/tests/unit/exportUtils_tests.ts'",
+    "private::test.unit": "karma start karma.conf.js --single-run",
     "private::test.standalone": "cypress run --browser chrome --spec 'tests/cypress/tests/standalone/**/*'",
     "build.watch": "webpack-dev-server --disable-host-check --content-base dash_table --mode development --config webpack.dev.config.js",
     "build": "run-s private::build:js private::build:backends",
@@ -44,10 +44,7 @@
     "test.standalone": "run-p --race private::host_js private::test.standalone",
     "test.unit": "run-s private::test.python private::test.unit",
     "test.visual": "build-storybook && percy-storybook",
-    "test.visual-local": "build-storybook",
-    "test.watch": "run-p --race \"private::build:js-test-watch\" --race private::host* private::opentests",
-    "pouet": "TS_NODE_PROJECT='./tests/js-unit/tsconfig.json' mocha -r ts-node/register -r tsconfig-paths/register tests/js-unit/*.ts",
-    "pouet2": "karma start karma.conf.js --single-run"
+    "test.visual-local": "build-storybook"
   },
   "author": "Chris Parmer <chris@plotly.com>",
   "maintainer": "Ryan Patrick Kyle <ryan@plotly.com>",
